--- a/lurker/api/v1/profiles/me-GET.json.yml
+++ b/lurker/api/v1/profiles/me-GET.json.yml
@@ -5,7 +5,9 @@ requestParameters:
   description: ''
   type: object
   additionalProperties: false
-  required: []
+  required:
+  - id
+  - email
   properties:
     access_token:
       description: ''
