--- a/lurker/api/v1/questions-GET.json.yml
+++ b/lurker/api/v1/questions-GET.json.yml
@@ -5,7 +5,12 @@ requestParameters:
   description: ''
   type: object
   additionalProperties: false
-  required: []
+  required:
+  - id
+  - title
+  - short_title
+  - body
+  - user_id
   properties:
     access_token:
       description: ''
@@ -61,7 +66,10 @@ responseParameters:
               description: ''
               type: object
               additionalProperties: false
-              required: []
+              required:
+              - id
+              - body
+              - question_id
               properties:
                 id:
                   description: ''
