--- a/lurker/api/v1/questions-POST.json.yml
+++ b/lurker/api/v1/questions-POST.json.yml
@@ -5,7 +5,12 @@ requestParameters:
   description: ''
   type: object
   additionalProperties: false
-  required: []
+  required:
+  - id
+  - title
+  - short_title
+  - body
+  - user_id
   properties:
     access_token:
       description: ''
