--- a/lurker/api/v1/questions/__id-GET.json.yml
+++ b/lurker/api/v1/questions/__id-GET.json.yml
@@ -5,7 +5,12 @@ requestParameters:
   description: ''
   type: object
   additionalProperties: false
-  required: []
+  required:
+  - id
+  - title
+  - short_title
+  - body
+  - user_id
   properties:
     access_token:
       description: ''
@@ -62,7 +67,9 @@ responseParameters:
             description: ''
             type: object
             additionalProperties: false
-            required: []
+            required:
+            - id
+            - body
             properties:
               id:
                 description: ''
@@ -88,7 +95,8 @@ responseParameters:
             description: ''
             type: object
             additionalProperties: false
-            required: []
+            required:
+            - url
             properties:
               url:
                 description: ''
