--- a/config/private_pub.yml.sample
+++ b/config/private_pub.yml.sample
@@ -5,6 +5,6 @@ test:
   server: "http://localhost:9292/faye"
   secret_token: "secret"
 production:
-  server: "http://example.com/faye"
+  server: "http://example.com:9292/faye"
   secret_token: "secret"
   signature_expiration: 3600 # one hour
