--- a/config/private_pub_thin.yml.sample
+++ b/config/private_pub_thin.yml.sample
@@ -1,6 +1,5 @@
-port: 4443
-ssl: true
-ssl_key_file: /path/to/server.pem
-ssl_cert_file: /path/to/certificate_chain.pem
+---
+port: 9292
 environment: production
 rackup: private_pub.ru
+daemonize: true
