--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,12 @@ before_script:
   - bundle exec rackup private_pub.ru -s thin -E production &
   - sleep 3
 env:
-  RAILS_ENV=test
-  SECRET_KEY_BASE="$(bundle exec rake secret)"
+  - RAILS_ENV=test
+  - SECRET_KEY_BASE="$(bundle exec rake secret)"
 script:
   - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rspec
 addons:
   postgresql: 9.3
+  code_climate:
+    repo_token: cb844b097433937f5cd96de2a5b479c2b95c5a05e886e3aebb490f5065df3b2c
