add travis TEST

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,11 @@ rvm:
   - 2.1.2
 before_script:
   - cp config/travis/database.travis.yml config/database.yml
-  - cp config/travis/secrets.travis.yml config/secrets.travis.yml
+  - cp config/travis/secrets.travis.yml config/secrets.yml
   - cp config/travis/private_pub.travis.yml config/private_pub.yml
   - psql -c 'create database qna_test;' -U postgres
   - bundle exec rackup private_pub.ru -s thin -E production &
   - sleep 3
-env:
-  - RAILS_ENV=test
-  - SECRET_KEY_BASE="$(bundle exec rake secret)"
 script:
   - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rspec
