--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_script:
 script:
   - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rspec
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 addons:
   postgresql: 9.3
   code_climate:
