Squashed commit of the following:
commit 088c02e5bbb61093e612135405ba96ae156e61db
Author: Lutsko Michael <lutsko86@gmail.com>
Date:   Fri Dec 25 09:27:41 2015 +0200

    test 3

commit 42a98906bb7d5a34aeb510953d453dfd69ae4e5b
Author: Lutsko Michael <lutsko86@gmail.com>
Date:   Fri Dec 25 09:20:03 2015 +0200

    test 2

commit c948af64bf90e75643440879ab39ad0ec6517e5a
Author: Lutsko Michael <lutsko86@gmail.com>
Date:   Fri Dec 25 09:16:56 2015 +0200

    test 1

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,9 +17,10 @@ Metrics/PerceivedComplexity:
 
 Metrics/AbcSize:
   Max: 21
-
+#test
 Style/Documentation:
   Enabled: false
-
+#test
+#test
 Style/ClassAndModuleChildren:
   Enabled: false
